tests/ui/privacy/pub-priv-dep/pub-priv1.stderr
error: extern crate `priv_dep` from private dependency 'priv_dep' in public interface
  --> $DIR/pub-priv1.rs:13:1
   |
LL | pub extern crate priv_dep;
   | ^^^^^^^^^^^^^^^^^^^^^^^^^
   |
note: the lint level is defined here
  --> $DIR/pub-priv1.rs:9:9
   |
LL | #![deny(exported_private_dependencies)]
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: type `OtherType` from private dependency 'priv_dep' in public interface
  --> $DIR/pub-priv1.rs:30:5
   |
LL |     pub field: OtherType,
   |     ^^^^^^^^^^^^^^^^^^^^

error: type `OtherType` from private dependency 'priv_dep' in public interface
  --> $DIR/pub-priv1.rs:37:5
   |
LL |     pub fn pub_fn_param(param: OtherType) {}
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: type `OtherType` from private dependency 'priv_dep' in public interface
  --> $DIR/pub-priv1.rs:40:5
   |
LL |     pub fn pub_fn_return() -> OtherType { OtherType }
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: trait `OtherTrait` from private dependency 'priv_dep' in public interface
  --> $DIR/pub-priv1.rs:47:5
   |
LL |     type Foo: OtherTrait;
   |     ^^^^^^^^^^^^^^^^^^^^

error: trait `OtherTrait` from private dependency 'priv_dep' in public interface
  --> $DIR/pub-priv1.rs:51:1
   |
LL | pub trait WithSuperTrait: OtherTrait {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: type `OtherType` from private dependency 'priv_dep' in public interface
  --> $DIR/pub-priv1.rs:60:5
   |
LL |     type X = OtherType;
   |     ^^^^^^

error: trait `OtherTrait` from private dependency 'priv_dep' in public interface
  --> $DIR/pub-priv1.rs:64:1
   |
LL | pub fn in_bounds<T: OtherTrait>(x: T) { unimplemented!() }
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: type `OtherType` from private dependency 'priv_dep' in public interface
  --> $DIR/pub-priv1.rs:67:1
   |
LL | pub fn private_in_generic() -> std::num::Saturating<OtherType> { unimplemented!() }
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: type `OtherType` from private dependency 'priv_dep' in public interface
  --> $DIR/pub-priv1.rs:70:1
   |
LL | pub static STATIC: OtherType = OtherType;
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: type `OtherType` from private dependency 'priv_dep' in public interface
  --> $DIR/pub-priv1.rs:73:1
   |
LL | pub const CONST: OtherType = OtherType;
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^

error: type `OtherType` from private dependency 'priv_dep' in public interface
  --> $DIR/pub-priv1.rs:76:1
   |
LL | pub type Alias = OtherType;
   | ^^^^^^^^^^^^^^

error: trait `OtherTrait` from private dependency 'priv_dep' in public interface
  --> $DIR/pub-priv1.rs:81:1
   |
LL | impl OtherTrait for PublicWithPrivateImpl {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: type `OtherType` from private dependency 'priv_dep' in public interface
  --> $DIR/pub-priv1.rs:86:1
   |
LL | impl PubTraitOnPrivate for OtherType {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: `use` import `m` from private dependency 'priv_dep' in public interface
  --> $DIR/pub-priv1.rs:94:9
   |
LL | pub use priv_dep::m;
   |         ^^^^^^^^^^^

error: `use` import `fn_like` from private dependency 'pm' in public interface
  --> $DIR/pub-priv1.rs:96:9
   |
LL | pub use pm::fn_like;
   |         ^^^^^^^^^^^

error: `use` import `PmDerive` from private dependency 'pm' in public interface
  --> $DIR/pub-priv1.rs:98:9
   |
LL | pub use pm::PmDerive;
   |         ^^^^^^^^^^^^

error: `use` import `pm_attr` from private dependency 'pm' in public interface
  --> $DIR/pub-priv1.rs:100:9
   |
LL | pub use pm::pm_attr;
   |         ^^^^^^^^^^^

error: `use` import `V1` from private dependency 'priv_dep' in public interface
  --> $DIR/pub-priv1.rs:102:9
   |
LL | pub use priv_dep::E::V1;
   |         ^^^^^^^^^^^^^^^

error: `use` import `priv_dep` from private dependency 'priv_dep' in public interface
  --> $DIR/pub-priv1.rs:104:9
   |
LL | pub use priv_dep::*;
   |         ^^^^^^^^

error: aborting due to 20 previous errors

